descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2016-07-XX  Release 7.26.2                                     ---
----------------------------------------------------------------------

* updated brlman to support browsing all page categories - Cliff Yapp
* added support for .rtwizardrc configuration file - Cliff Yapp
* updated MGED gdiff default drawing options to -l -r - Cliff Yapp
* updated MGED gdiff default tolerance to 100mm - Cliff Yapp
* removed MGED gdiff -R option - now default behavior - Cliff Yapp
* added MGED gdiff man page - Cliff Yapp
* removed obsolete g_diff man page - Cliff Yapp
* updated resizing behavior of main rtwizard panel - Cliff Yapp
* updated default size of rtwizard images to match gui - Cliff Yapp
* keep window sizing consistent on rtwizard pages - Cliff Yapp
* improved keep error message when file not created - Cliff Yapp
* changed window name for rtwizard gui to "RtWizard" - Cliff Yapp
* brep command attaches .brep suffix instead of _brep - Sean Morrison
* changed ogl & wgl framebuffer delayed write behavior - Sean Morrison
* upgraded libpng to version 1.6.23 - Cliff Yapp
* upgraded freetype to version 2.6.5 - Cliff Yapp
* upgraded zlib to version 1.2.8 - Cliff Yapp
* fix rtedge foreground/background color options - Jon Engbert
* allow ranges of 0-255 or 0.0-1.0 in rt/rtedge -C option - Jon Engbert


----------------------------------------------------------------------
--- 2016-08-08  Release 7.26.0                                     ---
----------------------------------------------------------------------

This major release of BRL-CAD culminates several years of development
effort to provide robust explicit boundary representation (BREP)
Non-uniform Rational Basis Spline (NURBS) import and ray tracing
analysis support.  Compared to previous polygonal mesh (BoT) methods,